03-networking-in-kubernetes/hands-on/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-nodeport
spec:
  selector:
    app: demo
  ports:
  - port: 80
    nodePort: 30080
  type: NodePort
